<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="calculate">CALCULATE</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="ok_15">OK (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="your_tip_equals">Tip amount: $</string>
</resources>